--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.3",
+    "mongoose-unique-validator": "^2.0.0",
     "morgan": "^1.9.0"
   },
   "scripts": {
