--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.1",
+    "mocha": "^5.0.0",
     "mongoose": "^5.0.3",
     "mongoose-unique-validator": "^2.0.0",
     "morgan": "^1.9.0"
   },
   "scripts": {
-    "start": "nodemon app"
+    "start": "nodemon app",
+    "test": "mocha"
   }
 }
